# sengoku-mcp

./: .coderabbit.yaml  .gitignore  Cargo.toml  LICENSE  PRD.md  README.md  package.json  pnpm-lock.yaml  rulesync.jsonc
.github/workflows/: rust.yml
.rulesync/rules/: project.md
.rulesync/skills/ai-cli-debugger/: SKILL.md
.rulesync/skills/code-review/: SKILL.md
cli/: Cargo.toml
cli/src/: app.rs  handler.rs  lib.rs  main.rs
cli/src/screen/: mod.rs
cli/src/ui/: action_log_renderer.rs  mod.rs
crates/engine/: Cargo.toml
crates/infrastructure/: Cargo.toml
crates/mcp-server/: Cargo.toml
engine/: Cargo.toml
engine/scratch/: personality_sim.rs
engine/src/application/dto/: daimyo_dto.rs  mod.rs  other_countries_info_dto.rs  player_status_dto.rs  resource_dto.rs
engine/src/application/usecase/: battle_usecase.rs  daimyo_query_usecase.rs  domestic_usecase.rs  game_lifecycle_usecase.rs  info_usecase.rs  info_usecase_test.rs  koku_management.rs  kuni_query_usecase.rs  mod.rs  tests.rs  turn_progression_usecase.rs  turn_progression_usecase_test.rs  turn_usecase.rs
engine/src/domain/: error.rs
engine/src/domain/model/: action_log.rs  battle.rs  daimyo.rs  daimyo_personality.rs  event.rs  game_state.rs  kuni.rs  mod.rs  resource.rs  value_objects.rs
engine/src/domain/repository/: action_log_repository.rs  battle_repository.rs  daimyo_repository.rs  event_dispatcher.rs  game_state_repository.rs  kuni_repository.rs  master_data_repository.rs  mod.rs  neighbor_repository.rs  simulation.rs
engine/src/domain/service/: battle_participation_service.rs  battle_service.rs  cpu_action_decision_service.rs  kuni_action_service.rs  kuni_service.rs  mod.rs  seasonal_event_service.rs  simulation_service.rs  tactic_validation_service.rs  turn_service.rs  war_decision_service.rs
engine/src/domain/service/tests/: battle_service_test.rs  mod.rs  seasonal_event_service_test.rs  turn_service_test.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs  master_data.rs  master_data_error.rs  persistence.rs
infrastructure/src/persistence/: in_memory_action_log_repository.rs  simulation.rs
mcp-server/: Cargo.toml
mcp-server/src/: main.rs
mcp-server/src/presentation/: handlers.rs
openspec/: config.yaml  project.md
static/master_data/: daimyo.csv  kuni.csv  neighbor.csv
(+140 files in other folders)
