[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
engine = { path = "../engine" }
infrastructure = { path = "../infrastructure" }
anyhow = "1.0.95"
thiserror = "2.0.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
rand = "0.8.5"
is_executable = "1.0.1"

[features]
ai-debug = []
