[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync", "rt"] }
thiserror = "2.0.18"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.27.0"
