[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
engine = { path = "../engine" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.18"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"
